feat: developed a pdf parser tool

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,11 +36,9 @@
         <div class="col-md-4 vertical-divider">
             <h2>Create Task</h2>
             <p>Manage your tasks efficiently. Click the button below to create a new task and stay organized.</p>
-            <a href="{% url 'task_create' %}" class="btn btn-primary">Create Task</a>
+            <a href="#" class="btn btn-primary">Create Task</a>
         </div>
     </div>
 </div>
-
-
 
 {% endblock %}
