--- a/templates/base.html
+++ b/templates/base.html
@@ -12,28 +12,28 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
-    <a class="navbar-brand" href="/">
-        <img src="{% static 'logo.png' %}" alt="Logo" style="height: 40px; vertical-align: middle;">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item align-self-center">
-                <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i></a>
-            </li>
-            <li class="nav-item align-self-center">
-                <a class="nav-link" href="/documents/">Documents</a>
-            </li>
-            <li class="nav-item align-self-center">
-                <a class="nav-link" href="/tasks/">Tasks</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
+{% include 'bar.html' %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+        <a class="navbar-brand" href="/">
+            <img src="{% static 'logo.png' %}" alt="Logo" style="height: 40px; vertical-align: middle;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item align-self-center">
+                    <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i></a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link" href="/documents/">Documents</a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link" href="/tasks/">Tasks</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container mt-4">
         {% block content %}
@@ -46,7 +46,9 @@
         </div>
     </footer>
 
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
