chore: update .gitignore, pyproject.toml, base templates, env example, static and docs

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         <div class="col-md-4 vertical-divider">
             <h2>Upload Document</h2>
             <p>Upload and organize your documents easily. Click the button below to start uploading your first document.</p>
-            <a href="{% url 'upload' %}" class="btn btn-success">Upload Document</a>
+            <a href="{% url 'document_upload' %}" class="btn btn-success">Upload Document</a>
         </div>
         <div class="col-md-4 vertical-divider">
             <h2>Create Task</h2>
