--- a/templates/base.html
+++ b/templates/base.html
@@ -8,47 +8,51 @@
     <title>{% block title %}DocuScanHome{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
-{% include 'bar.html' %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
-        <a class="navbar-brand" href="/">
-            <img src="{% static 'logo.png' %}" alt="Logo" style="height: 40px; vertical-align: middle;">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item align-self-center">
-                    <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i></a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link" href="/documents/">Documents</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link" href="/tasks/">Tasks</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        {% block content %}
-        {% endblock %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+    <a class="navbar-brand" href="/">
+        <img src="{% static 'logo.png' %}" alt="Logo" style="height: 40px; vertical-align: middle;">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item align-self-center">
+                <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i></a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link" href="/documents/">Documents</a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link" href="/tasks/scan/">Scanner</a>
+            </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link" href="/tasks/">Tasks</a>
+            </li>
+        </ul>
     </div>
+</nav>
 
-    <footer class="footer mt-auto py-3 bg-dark text-white">
-        <div class="container text-center">
-            <span class="text-muted">&copy; 2024 Archie | <a href="/privacy-policy/" class="text-white">Privacy Policy</a> | <a href="/terms-of-service/" class="text-white">Terms of Service</a></span>
-        </div>
-    </footer>
+<!-- CSRF токен для AJAX запросов -->
+{% csrf_token %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
+<div class="container mt-4">
+    {% block content %}
+    {% endblock %}
+</div>
+
+<footer class="footer mt-auto py-3 bg-dark text-white">
+    <div class="container text-center">
+        <span class="text-muted">&copy; 2024 Archie | <a href="/privacy-policy/" class="text-white">Privacy Policy</a> | <a href="/terms-of-service/" class="text-white">Terms of Service</a></span>
+    </div>
+</footer>
+
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
